# duely

./: .gitignore  .lintstagedrc.mjs  package-lock.json  package.json
.github/workflows/: ci.yml
apps/web/: .gitignore  .prettierrc.json  eslint.config.mjs  next.config.ts  package.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/(auth)/: actions.ts  layout.tsx  schema.ts
apps/web/src/app/(auth)/_components/: login-form.tsx  password-field.tsx  signup-form.tsx
apps/web/src/app/(auth)/login/: page.tsx
apps/web/src/app/(auth)/signup/: page.tsx
apps/web/src/app/account/: page.tsx
apps/web/src/app/auth/callback/: route.ts
apps/web/src/components/: form-controls.tsx  icons.tsx
apps/web/src/lib/: env.ts  resolve-origin.ts
apps/web/src/lib/supabase/: client.ts  middleware.ts  server.ts
apps/worker/: main.py  pyproject.toml
apps/worker/tests/: test_health.py
supabase/: config.toml
supabase/migrations/: 20260722193231_create_profiles_table.sql
